[gd_scene load_steps=13 format=3 uid="uid://byf4j6rxeq0f0"]

[ext_resource type="Script" uid="uid://dcavhjyw7sit6" path="res://scenes/npc/npc.gd" id="1_pcwmf"]
[ext_resource type="Texture2D" uid="uid://dmu212n1aa0uy" path="res://assets/images/soldier1_gun.png" id="1_sspvn"]
[ext_resource type="AudioStream" uid="uid://dql8sk34j1mlw" path="res://assets/sounds/gasp1.wav" id="3_woxlu"]
[ext_resource type="AudioStream" uid="uid://dud2f7kd6hjuw" path="res://assets/sounds/gasp2.wav" id="4_ay68w"]
[ext_resource type="AudioStream" uid="uid://bpu68eq1dfmr2" path="res://assets/sounds/gasp3.wav" id="5_evswx"]
[ext_resource type="Texture2D" uid="uid://cttykihcewyy4" path="res://assets/images/running_1.png" id="6_ay68w"]
[ext_resource type="AudioStream" uid="uid://c3kgt0sdt0ol5" path="res://assets/sounds/sfx_wpn_laser2.wav" id="7_evswx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pcwmf"]
height = 38.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_p70cs"]
streams_count = 3
stream_0/stream = ExtResource("3_woxlu")
stream_1/stream = ExtResource("4_ay68w")
stream_2/stream = ExtResource("5_evswx")

[sub_resource type="Animation" id="Animation_evswx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ay68w"]
resource_name = "alert"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.873323, 0.0590578, 0.229225, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p70cs"]
_data = {
&"RESET": SubResource("Animation_evswx"),
&"alert": SubResource("Animation_ay68w")
}

[node name="Npc" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_pcwmf")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -13.0
offset_top = -87.0
offset_right = 39.0
offset_bottom = -12.0
scale = Vector2(0.569884, 0.569884)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "awdad
adawd
adadd"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_sspvn")
offset = Vector2(10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pcwmf")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 30.0
max_speed = 150.0

[node name="PlayerDetect" type="RayCast2D" parent="."]
target_position = Vector2(400, 0)

[node name="GaspSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_p70cs")

[node name="Warning" type="Sprite2D" parent="."]
position = Vector2(6, 0)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_ay68w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p70cs")
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_evswx")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
